Adicionado backend Node.js com PostgreSQL para almoxarifado

--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
   <body>
     <noscript>Você precisa habilitar o JavaScript para rodar este aplicativo.</noscript>
     <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
+    <script type="module" src="script.js"></script>
+    <script>
+      // TODO: Cole TODO O CÓDIGO JavaScript para o frontend aqui
+      // (Funções de carregarItens, adicionarNovoItem, etc. e event listeners)
+    </script>
   </body>
 </html>
